...
    AddContaViewModel addcontaViewModel = context.watch<AddContaViewModel>();
    
    LoginViewModel loginViewModel = context.watch<LoginViewModel>();

    double screenWidth = MediaQuery.of(context).size.width;
    return Scaffold(
      appBar: AppBar(title: Text('Adicionar Despesa')),

      body: Padding(
        padding: const EdgeInsets.all(24.0),
        child: SingleChildScrollView(
          child: Column(
            crossAxisAlignment: CrossAxisAlignment.start,
...
                children: [
                  Row(
                    children: [
                      Row(
                        children: [
                          Radio<String>(
                            value: 'Nubank',
                            groupValue: addcontaViewModel.origem,
                            activeColor: Colors.white,
                            onChanged: (value) {
                              setState(() {
                                addcontaViewModel.setOrigem(value);
                              });
...
                              setState(() {
                                addcontaViewModel.setDono(value);
                              });
                            },
                          ),
                          Text(
                            'Athos',
                            style: TextStyle(
                              fontSize: 14,
                              fontWeight: FontWeight.bold,
                              color: Colors.white,
                            ),
                          ),
...
                    final valorConvertido = double.tryParse(_valorController.text);

                    if(_valorController.text.trim().isEmpty){
                      _showSnackBarErro(context, 'Valor não pode ser vazio');
                      return;
                    } else if (valorConvertido == null || valorConvertido < 0.01) {
                      _showSnackBarErro(context, 'Insira um valor numérico válido e maior que 0.00');
                      return;
                    }

                   await addcontaViewModel.onAdicionarConta(origem: addcontaViewModel.origem, data: addcontaViewModel.data, descricao: _descController.text, dono: addcontaViewModel.dono, valor: double.tryParse(_valorController.text),
                   token : loginViewModel.user!.token);

                   await loginViewModel.fetchSaldo(loginViewModel.user!.token);

                   Navigator.pushReplacementNamed(context, '/dashboard');
                   
                  },
                  child: Text('Adicionar'),
                ),
              ),
            ],
          ),
        ),
      ),
...
