...
                Navigator.popAndPushNamed(context, '/todas_contas');
              },
            ),

            ListTile(
              leading: const Icon(Icons.post_add_sharp),
              title: const Text('Adicionar conta'),
              onTap: () {

                
                addcontaViewModel.reset();
                Navigator.popAndPushNamed(context, '/add_conta');
              },
...
                  child: Row(
                    mainAxisAlignment: MainAxisAlignment.spaceBetween,
                    children: [
                      Column(
                        children: [
                          Text(
                            'Saldo Total',
                            style: TextStyle(color: Colors.white),
                          ),
                          Text(
                            '${loginViewModel.user!.saldo}',
                            key: const Key('valor_saldo_total'),
                            style: TextStyle(
                              color: Colors.white,
                              fontSize: 14,
                              fontWeight: FontWeight.bold,
                            ),
                          ),
...
