...
      
      isLoading = false;
      notifyListeners();
    } on TimeoutException catch(e){
      isLoading = false;
      notifyListeners();
      message = 'Erro de resposta do servidor:';
      rethrow;
    } catch (e) {
      isLoading = false;
      notifyListeners();
      rethrow;
    }
...
